# c-codebase

./: CMakeLists.txt  README.md
src/: base.h  main.c  saratoga.h
src/base/: defines.h
src/saratoga/: st_assert.c  st_assert.h  st_atom.c  st_atom.h  st_debug.c  st_defines.h  st_except.c  st_except.h  st_list.c  st_memchk.c  st_memory.c  st_memory.h  st_util.c  st_util.h
